<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/firsttxt"
        android:textSize="40sp"
        android:textColor="@color/black"
        android:gravity="center_horizontal"
        android:textStyle="bold|italic"/>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/atext"
            android:textSize="26sp"
            android:inputType="number"
            android:id="@+id/ka"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/btext"
            android:textSize="26sp"
            android:inputType="number"
            android:id="@+id/kb"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ctext"
            android:textSize="26sp"
            android:inputType="number"
            android:id="@+id/kc"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/dtext"
            android:textSize="26sp"
            android:inputType="number"
            android:id="@+id/kd"/>
    </TableRow>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/solve"
        android:textSize="30sp"
        android:layout_margin="10dp"
        android:id="@+id/solve"
        android:backgroundTint="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ax_2_bx_c_0"
        android:textSize="25sp"
        android:id="@+id/solvea"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bx_2_cx_d_0"
        android:textSize="25sp"
        android:id="@+id/solveb"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:textColor="@color/black"/>

</LinearLayout>